<!--Authors: Students Names and group name -->
<!--activity_menu_view.xml-->
<!--Date-->
<!--xml layout for MenuView.java -->
<!-- This XML file will be where you change the look and feel of the Main Menu -->
  

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient" >
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" 
            android:gravity="center"
            >
			<Button
            	android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:background="@drawable/custom_button"
                android:layout_margin="15dp"
                android:onClick="createClick"
                android:text="@string/menu_btn1"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:background="@drawable/custom_button"
                android:layout_margin="15dp"
                android:onClick="openClick"
                android:text="@string/menu_btn2"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:onClick="customerClick"
                android:text="@string/menu_btn3" />
           

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:onClick="serviceClick"
                android:text="@string/menu_btn4" />

             <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:background="@drawable/custom_button"
                android:layout_margin="15dp"
                android:onClick="accountClick"
                android:text="@string/menu_btn5" 
                />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:onClick="helpClick"
                android:text="@string/menu_btn6" />
        </TableRow>

    </TableLayout>
     
    
    
    
    <TextView
        android:id="@+id/textViewCreated"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_bottom_txtBox"
        android:layout_margin="2dp"
        android:textColor="@color/gold3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewCreated"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="logoutClick"
        android:text="@string/menu_bottom_btn" />

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/menu_title_txtBox"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textColor="@color/gold3"
        android:textStyle="bold" />
 
</RelativeLayout>